# chora-backend

./: .coverage  .dockerignore  .editorconfig  .gitignore  Dockerfile  Dockerfile.alpine  Dockerfile.trixie  GIT_WORKFLOW  README.md  docker-bake.hcl  mkdocs.yml  pyproject.toml  report.html
.github/workflows/: ci.yml  docker.yml  docs.yml
docs/: ReadMe.md  er-diagramm.md  index.md  komponentendiagramm.md  schichtenarchitektur.md  use-cases.md
docs/diagramme/src/: er-diagramm.plantuml  komponenten.plantuml  schichtenarchitektur.plantuml  use-cases.plantuml
docs/modules/: __init__.md  config.md  entity.md  graphql.md  repository.md  rest.md  security.md  service.md
extras/: dependency-check.py  suppression.xml
extras/bruno/: ReadMe.md
extras/bruno/chora/: opencollection.yml
extras/bruno/chora/Admin/: Shutdown.yml  folder.yml
extras/bruno/chora/Admin/Health/: Liveness.yml  Readiness.yml
extras/bruno/chora/Dev/: DB neu laden.yml  Keycloak neu laden.yml  folder.yml
extras/bruno/chora/GraphQL/: folder.yml
extras/bruno/chora/GraphQL/Login/: Login als admin.yml
extras/bruno/chora/GraphQL/Mutation/: Artist erstellen.yml  folder.yml
extras/bruno/chora/GraphQL/Query/: Artist 1010.yml  Artist mit ID 1.yml  Artists nach Name.yml  folder.yml
extras/bruno/chora/Keycloak/: New Access Token -admin-.yml  folder.yml  openid-configuration.yml
extras/bruno/chora/Misc/: Favicon.yml  folder.yml
extras/bruno/chora/Prometheus/: folder.yml  metrics.yml
extras/bruno/chora/REST/: folder.yml
extras/bruno/chora/REST/Artists/: Alle Artists Page 2.yml  Alle Artists.yml  Artist 1010 Email Username patchen.yml  Artist 1010 Songs und Vertrag patchen.yml  Artist 1010 aktualisieren.yml  Artist 1010 loeschen.yml  Artist anlegen.yml  Artist mit ID 1 aktualisieren.yml  Artist mit ID 1 loeschen.yml  Artist mit ID 1 patchen.yml  Artist mit ID 1.yml  Artist mit ID 1000.yml  Artist mit ID 1010.yml  Artist mit Song IDs.yml  If-None-Match.yml  Nicht-vorhandene ID 999999.yml  Vorhandene ID 1 mit If-None-Match.yml  folder.yml
extras/bruno/chora/REST/Songs/: Alle Songs.yml  Song 1 von Artist 1 aktualisieren.yml  Song 1 von Artist 1 loeschen.yml  Song 1 von Artist 1.yml  Song 3010 aktualisieren.yml  Song 3010 loeschen.yml  Song 3010.yml  Song NOTFOUND.yml  Song aktualisieren NOTFOUND.yml  Song fuer Artist 1 anlegen.yml  Song für Artist 1010 anlegen.yml  Song für Artist 1010,1040 anlegen.yml  Song für Artist anlegen NOTEXIST.yml  Song von Artist NOTFOUND.yml  Song von Artist.yml  Songs von Artist 1.yml  Songs von Artist 1010.yml  folder.yml
extras/bruno/chora/REST/Token/: Token als admin.yml  Token mit falschem Passwort.yml  Token ohne Passwort.yml  folder.yml
extras/bruno/chora/environments/: chora.yml
extras/bruno/patient/: opencollection.yml
extras/bruno/patient/Admin/: Shutdown.yml
extras/bruno/patient/Admin/Health/: Liveness.yml  Readiness.yml  folder.yml
extras/bruno/patient/Dev/: DB neu laden.yml  Keycloak neu laden.yml  folder.yml
extras/bruno/patient/GraphQL/Login/: Login als admin.yml  Login mit falschem Passwort.yml  folder.yml
extras/bruno/patient/GraphQL/Mutation/: Neuer Patient mit ungültigen Daten.yml  Neuer Patient.yml  folder.yml
extras/bruno/patient/GraphQL/Query/: Suche id, version, ... von Patienten mit Nachnamen.yml  folder.yml  (+6 more)
extras/bruno/patient/Keycloak/: New Access Token -admin-.yml  folder.yml
extras/bruno/patient/Prometheus/: folder.yml  metrics.yml
extras/bruno/patient/REST/: folder.yml
extras/bruno/patient/environments/: patient.yml
extras/compose/chora/: app.toml  compose.yml
extras/compose/debug/: compose.busybox.yml  compose.yml
extras/compose/keycloak/: ReadMe.md  compose.yml  report.html
extras/compose/mailpit/: ReadMe.md  compose.yml
extras/compose/patient/: .env  compose.yml  patient.csv  report.html
extras/compose/postgres/: ReadMe.md
extras/compose/prometheus-grafana/: ReadMe.md  compose.yml  generate-load.py  prometheus.yml
extras/compose/prometheus-grafana/grafana-datasources/: datasource.yml
extras/compose/sonarqube/: ReadMe.md  compose.yml
src/chora/: __init__.py  __main__.py  asgi_server.py  banner.py  fastapi_app.py  problem_details.py
src/chora/config/: __init__.py  config.py  db.py  dev_modus.py  excel.py  graphql.py  keycloak.py  logger.py  mail.py  server.py  tls.py
src/chora/config/dev/: db_populate.py  db_populate_router.py  keycloak_populate.py  keycloak_populate_router.py
src/chora/config/resources/: app.toml
src/chora/entity/: __init__.py  artist.py  base.py  genre.py  song.py  vertrag.py
src/chora/graphql_api/: __init__.py  graphql_types.py  schema.py
src/chora/repository/: __init__.py  artist_repository.py  chora_repository.py  pageable.py  session_factory.py  slice.py  song_repository.py
src/chora/router/: __init__.py  artist_base_model.py  artist_model.py  artist_patch_model.py  artist_router.py  artist_update_model.py  artist_write_router.py  constants.py  dependencies.py  health_router.py  page.py  shutdown_router.py  song_model.py  song_router.py  song_write_router.py  vertrag_model.py  vertrag_router.py
src/chora/security/: __init__.py  auth_router.py  dependencies.py  exceptions.py  login_data.py  response_headers.py  role.py  roles_required.py  token_service.py  user.py  user_service.py
src/chora/service/: __init__.py  artist_dto.py  artist_service.py  artist_update_options.py  artist_write_service.py  exceptions.py  mailer.py  song_dto.py  song_service.py  song_write_service.py  vertrag_dto.py
tests/: __init__.py
tests/integration/: __init__.py  common_test.py  simple_test.py
tests/integration/graphql_api/: __init__.py  conftest.py  mutation_test.py  query_test.py
tests/integration/rest/: __init__.py  conftest.py  delete_test.py  get_by_id_test.py  get_test.py  health_test.py  patch_test.py  post_test.py  put_test.py  song_write_test.py
tests/integration/security/: __init__.py  login_test.py
tests/lasttest/: README.md  __init__.py  locustfile.py
tests/unit/: __init__.py  conftest.py  create_test.py  find_by_id_test.py  find_test.py
(+50 files in other folders)
